--- a/index.html
+++ b/index.html
@@ -26,27 +26,28 @@
         <div class="profile">
           <img class="my_image" src="images/IMG_20180801_183220_580.jpg" alt="my_image">
           <h2>Hi.</h2>
-          <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="intro">Accomplished software developer with 15 years of experience in development of applications. Excels in every stage of the life cycle of software development, including design creation, coding, debugging, testing, and maintenance. Expert in devising innovative and tailored solutions to assist businesses achieve their goals in a variety of industries. Advanced skills and knowledge of leading programming tools with a strong background in mathematics, algorithms, and data-processing logic.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>What I can do.</h2>
           <div class="skill-row">
             <img class="comp" src="images/computer2.png" alt="comuter">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <h3>My skills.</h3>
+            <p>Superior development skills include OOD, Agile Development, Solutions Architecture, Project Management, and Technical Documentation. -Programming languages include C/C++/C#, ASP.NET, HTML5, VBScript, Java, JavaScript, T-SQL, JQuery, XML, PHP, Objective C and MySQL. -Exceptional ability to work in the following environments: Java Enterprise Edition, UNIX, Linux, and Windows. -Strong decision maker, critical thinker, and creative designer with the ability to think around problems to unusual yet highly effective solutions. -Excels in systems evaluation to identify system performance indicators and the best course of action to take to improve or correct performance based upon specific system goals.</p>
           </div>
           <div class="skill-row">
             <img class="tennis" src="images/tennis.png" alt="tennis">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <h3>Develop what you need.</h3>
+            <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
+            <p>Superior development skills include OOD, Agile Development, Solutions Architecture, Project Management, and Technical Documentation. -Programming languages include C/C++/C#, ASP.NET, HTML5, VBScript, Java, JavaScript, T-SQL, JQuery, XML, PHP, Objective C and MySQL. -Exceptional ability to work in the following environments: Java Enterprise Edition, UNIX, Linux, and Windows. -Strong decision maker, critical thinker, and creative designer with the ability to think around problems to unusual yet highly effective solutions. -Excels in systems evaluation to identify system performance indicators and the best course of action to take to improve or correct performance based upon specific system goals.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>I’m currently available for freelance work.</h3>
+          <p class="contact-message">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
           <a class="btn" href="mailto:motibrod@gmail.com">CONTACT ME</a>
         </div>
       </div>
